Add bplus_tree by Beren Minor <beren.minor+github@gmail.com> to benchmark

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "libcuckoo"]
 	path = libcuckoo
 	url = https://github.com/efficient/libcuckoo.git
+[submodule "bplus-tree"]
+	path = bplus-tree
+	url = git://github.com/berenm/bplus-tree.git
